# Vocal-and-accompaniment-separation

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  MIGRATION.md  README.md  package-lock.json  package.json
.github/workflows/: docker.yml
public/: index.html  renderer.js  style.css
src/: cli.rs  gui.js  index.js  main.rs  preload.js  separate.js  separate.rs  server.js  server.rs
