[package]
name = "vocal-split"
version = "1.0.0"
edition = "2021"
description = "基于 FFmpeg 的人声与伴奏分离工具"

[[bin]]
name = "vocal-split"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
